--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.DS_Store
 /logistic_regression_with_nn/__pycache__/lr_utils.cpython-36.pyc
 /logistic_regression_with_nn/.DS_Store
+/lr_with_nn_differeent_dataset/Untitled.code-workspace
