changes main new dataset

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /logistic_regression_with_nn/__pycache__/lr_utils.cpython-36.pyc
 /logistic_regression_with_nn/.DS_Store
 /lr_with_nn_differeent_dataset/Untitled.code-workspace
+*.pyc
